--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -20,8 +20,8 @@
 <h2>{{ page.title }}</h2>
 <ul>
   {% for post in site.pages do %}
-    {% if post.data != "" %}
-    <li>{{ post.date }} <a href="{{ post.url }}">{{ post.title }}</a>/li>
+    {% if post.date != "" %}
+    <li>{{ post.date }} <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endif %}
   {% endfor %}
 </ul>
