--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -20,7 +20,7 @@
 <h2>{{ page.title }}</h2>
 <ul>
   {% for post in site.pages do %}
-    {% if post.date != "" %}
+    {% if post.date %}
     <li>{{ post.date }} <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endif %}
   {% endfor %}
