--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -32,8 +32,8 @@
       <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
       <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
     </li>
-    {% endif %}
-  {% endfor %}
+    {%- endif %}
+  {%- endfor %}
 </ul>
 </article>
 <script>
