--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -26,14 +26,14 @@
 <article class="markdown-body">
 <h2>{{ page.title }}</h2>
 <ul>
-  {%- for post in site.pages do %}
-    {%- if post.date %}
+  {% for post in site.pages do %}
+    {% if post.date %}
     <li>
       <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
       <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
     </li>
-    {%- endif %}
-  {%- endfor %}
+    {% endif %}
+  {% endfor %}
 </ul>
 </article>
 <script>
