--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -15,7 +15,7 @@
     }
     ul {
         list-style: none;
-        padding: 0;
+        padding: 0 !important;
     }
     time {
       float: right;
