--- a/_layouts/default-date.html
+++ b/_layouts/default-date.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="/css/github-markdown.css">
+<link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
 <style>
     body {
         box-sizing: border-box;
