--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -27,7 +27,8 @@
 <article class="markdown-body">
 <h2>{{ page.title }}</h2>
 <ul>
-  {% for page in site.pages do %}
+  {% assign pages = site.pages | sort:"date" %}
+  {% for page in pages %}
     {% if page.date %}
     <li>
       <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
