--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="/css/github-markdown.css">
 <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
 <style>
+    @media screen and (max-width: 980px){
+        body {
+            padding: 25px !important;
+        }
+    }
     body {
         box-sizing: border-box;
         min-width: 200px;
