--- a/_layouts/default-date.html
+++ b/_layouts/default-date.html
@@ -3,6 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@blu3id" />
+<meta name="twitter:creator" content="@blu3id">
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="blu3id.uk">
+<meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html',''}}">
+<meta property="og:title" content="{{ page.title }}">
+<meta property="og:description" content="{{ page.content | markdownify | strip_html | replace:page.title,'' | truncatewords:30 }}">
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="/css/github-markdown.css">
 <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
