--- a/_layouts/default-date.html
+++ b/_layouts/default-date.html
@@ -27,13 +27,58 @@
         margin: 0 auto;
         padding: 45px;
     }
+    .related {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        padding: 25px 25px 45px;
+        background: #e9e9e9
+    }
+    .related ul {
+        list-style: none;
+        padding: 0 !important;
+        min-width: 200px;
+        max-width: 890px;
+        margin: 0 auto;
+    }
+    .related h4 {
+        margin-top: 0;
+        margin-bottom: 10px
+    }
 </style>
 </head>
 <body>
 <article class="markdown-body">
 <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
+{% if page.tag %}
+{%- assign tag = page.tag | capitalize %}
+{%- assign title = page.title | prepend:'# ' %}
+<h1 id="{{ page.title | slugify }}"><span class="tag {{ page.tag }}">{{ page.tag | capitalize }}</span> {{ page.title | replace:tag,'' | replace:':','' }}</h1>
+{{ page.content | replace_first:title,'' | markdownify }}
+{% else %}
 {{ content }}
+{% endif %}
 <p><small>{{ page.content | number_of_words }}</small></p>
+
+<div class="related">
+    <ul>
+        <h3>Other posts you may be intrested in:</h3>
+    {%- assign pages = site.pages | sort:"date" | reverse %}
+    {%- for post in pages limit:5 %}
+        {%- if post.date and post.title != page.title %}
+        <li>
+            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_long_string }}</time>
+            {%- if post.tag %}
+            {%- assign tag = post.tag | capitalize %}
+            <h4><a href="{{ post.url }}"><span class="tag {{ post.tag }}">{{ post.tag | capitalize }}</span> {{ post.title | replace:tag,'' | replace:':','' }}</a></h4>
+            {%- else %}
+            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+            {%- endif %}
+        </li>
+        {%- endif %}
+    {%- endfor %}
+    </ul>
+</div>
 </article>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
