--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -11,6 +11,9 @@
         body {
             padding: 25px !important;
         }
+        time {
+            float: none !important;
+        }
     }
     body {
         box-sizing: border-box;
@@ -24,7 +27,10 @@
         padding: 0 !important;
     }
     time {
-      float: right;
+        float: right;
+    }
+    .markdown-body h3 {
+        margin-top: 0;
     }
 </style>
 </head>
@@ -32,15 +38,20 @@
 <article class="markdown-body">
 <h2>{{ page.title }}</h2>
 <ul>
-  {% assign pages = site.pages | sort:"date" %}
-  {% for page in pages %}
-    {% if page.date %}
+  {%- assign pages = site.pages | sort:"date" %}
+  {%- for page in pages %}
+    {%- if page.date %}
     <li>
       <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
+      {%- if page.tag %}
+      {%- assign tag = page.tag | capitalize %}
+      <h3><a href="{{ page.url }}"><span class="tag {{ page.tag }}">{{ page.tag | capitalize }}</span> {{ page.title | replace:tag,'' | replace:':','' }}</a></h3>
+      {%- else %}
       <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+      {%- endif %}
     </li>
-    {% endif %}
-  {% endfor %}
+    {%- endif %}
+  {%- endfor %}
 </ul>
 </article>
 <script>
