--- a/css/github-markdown.css
+++ b/css/github-markdown.css
@@ -712,3 +712,15 @@ blockquote.box {
   color: #333;
   background-color: #f7f7f7;
 }
+
+.tag {
+  display: inline-block;
+  padding: 0.1em 0.3em;
+  color: #fff;
+  background-color: #005ea5;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: .75em;
+  vertical-align: bottom;
+  margin-bottom: 0.1em;
+}
