Add Mastodon backlink and webfinger

--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -53,6 +53,7 @@
     {%- endif %}
   {%- endfor %}
 </ul>
+<p style="display: none;"><small><a rel="me" href="https://mastodon.social/@blu3id">Find me on Mastodon</a></small></p>
 </article>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
