--- a/_layouts/default-index.html
+++ b/_layouts/default-index.html
@@ -6,6 +6,7 @@
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="/css/github-markdown.css">
 <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
+<link rel="me" href="https://mastodon.social/@blu3id">
 <style>
     @media screen and (max-width: 980px){
         body {
@@ -53,7 +54,6 @@
     {%- endif %}
   {%- endfor %}
 </ul>
-<p style="display: none;"><small><a rel="me" href="https://mastodon.social/@blu3id">Find me on Mastodon</a></small></p>
 </article>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
