--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,33 @@
+---
+layout: subscribe
+---
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-<title>{{ page.title }}</title>
-<link rel="stylesheet" href="/css/github-markdown.css">
-<link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
-<style>
-    @media screen and (max-width: 980px){
-        body {
-            padding: 25px !important;
-        }
-    }
-    body {
-        box-sizing: border-box;
-        min-width: 200px;
-        max-width: 980px;
-        margin: 0 auto;
-        padding: 45px;
-    }
-</style>
+{% include head.html %}
 </head>
 <body>
-<article class="markdown-body">
-{{ content }}
-</article>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-94084358-1', 'auto');
-  ga('send', 'pageview');
-</script>
+{% include header.html %}
+  <main>
+    <article{% if page.draft %} class="draft{% if page.tag %} {{ page.tag }}{% endif  %}"{% else %}{% if page.tag %} class="{{ page.tag }}"{% endif  %}{% endif %}>
+      <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
+{%- if page.tag %}
+  {%- assign tag = page.tag | capitalize %}
+  {%- assign title = page.title | prepend:'# ' %}
+      <h1 id="{{ page.title | slugify }}" class="with-tag"><span class="tag {{ page.tag }}">{{ page.tag | capitalize }}</span> <span class="title">{{ page.title | replace:tag,'' | replace:':','' | markdownify | strip_html | strip_newlines | escape_once }}</span></h1>
+  {{ page.content | replace_first:title,'' | markdownify | remove: ' role="doc-endnote"' | replace: '<pre class="highlight">', '<pre>' | replace: "<pre><code", "<code" | replace: "</code></pre>", "</code>" }}
+{%- else %}
+      {{ content | remove: ' role="doc-endnote"' | replace: '<pre class="highlight">', '<pre>' | replace: "<pre><code", "<code" | replace: "</code></pre>", "</code>" }}
+{%- endif %}
+{% include metadata.html %}
+    </article>
+  </main>
+  <footer class="related">
+    <h3>Other posts you may be interested in:</h3>
+    <ul>
+    {%- include posts-short.html exclude=page.title random=true limit=4 %}
+    </ul>
+  </footer>
+{% include footer.html %}
 </body>
 </html>
