--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@blu3id" />
   <meta name="twitter:creator" content="@blu3id">
+  <meta name="fediverse:creator" content="@blu3id@mastodon.social" />
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="blu3id.uk">
   <meta property="og:url" content="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
