--- a/_sass/site/_article.scss
+++ b/_sass/site/_article.scss
@@ -325,8 +325,8 @@ article {
       text-decoration: none;
       text-transform: uppercase;
       font-size: 0.75em;
-      vertical-align: bottom;
-      margin-bottom: 0.1em;
+      vertical-align: middle;
+      margin-bottom: 0.2em;
       border-radius: 0.1em;
       border: 0.1em solid var(--color-light);
       font-weight: bold;
